Add Codacy link

--- a/README
+++ b/README
@@ -1,1 +1,29 @@
-doc/README.md
+# Welcome to libdxf
+
+libdxf is a library (written in C) with DXF related functions.
+
+The Drawing eXchange Format (DXF) is a defacto industry standard for the
+exchange of drawing files between various Computer Aided Drafting programs,
+designed by Autodesk(TM).
+
+Currently this project has a "Work in progress" status.
+
+The code base is still incomplete and is not debugged to an acceptable level.
+
+My aim for the libdxf-0.0.1 release is to publish a R14 compliant library, and
+from that point improve as to be compliant with newer editions of DXF.
+
+You are always welcome to help with patches or bug reports :-)
+
+In the mean time one can always fork the latest code from the Github repository and
+help with patches or [bug reports](https://launchpad.net/libdxf)
+
+Developer documentation can be found [here](http://ljh4timm.home.xs4all.nl/libdxf/doxygen/index.html) .
+
+Travis-CI Status: [![Build Status](https://travis-ci.org/bert/libdxf.svg?branch=master)](https://travis-ci.org/bert/libdxf)
+
+Kind regards,
+
+Bert Timmerman.
+
+Codacy Badge
